GMM_Main/src/objects/NOFA_Group__c.object
<CustomObject>
    <fields>
        <fullName>Legacy_NOFO_Group_ID__c</fullName>
        <label>Legacy NOFO Group ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Type__c</fullName>
        <label>Review Type</label>
        <picklist>
            <picklistValues>
                <fullName>Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External or Blended</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Review_of__c</fullName>
        <label>Review of</label>
        <picklist>
            <picklistValues>
                <fullName>Applications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concept papers</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>NOFO Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Review_of__c</columns>
        <columns>Review_Type__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>GO_Group</group>
            <group>PO_Group</group>
            <group>SGO_Group</group>
            <group>SPO_Group</group>
            <group>XO_Group</group>
            <role>Administrator</role>
            <role>Expert_Reviewers</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>NOFA Group-{0000}</displayFormat>
        <label>NOFO Group ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NOFO Group</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>